# gold-price-prediction-system

./: .gitignore  README.md  app.py  data_pipelines.py  main.py  pyproject.toml  requirements.txt  setup.py  template.py  templates.py
Artifacts/: batch_preds.csv  test.csv  train.csv
Artifacts/Transformed/: test.csv  train.csv
Artifacts/model/: lasso.pkl
configs/: batch_features_pipeline.yaml  configs.yaml  data_ingestion.yaml  data_transformation.yaml  data_validation.yaml  model_evaluation.yaml  model_trainer.yaml
gold/: pyvenv.cfg
gold_prediction/components/: data_ingestion.py  data_transformation.py  data_validation.py  hyper_tuning.py  hyperparameter_tuning.py  model_evaluation.py  model_trainer.py  predictions_data.py
gold_prediction/exception/: exception.py
gold_prediction/logging/: logger.py
gold_prediction/pipeline/: batch_prediction.py  inference_pipeline.py  training_pipeline.py
gold_prediction/utils/: utility_functions.py
notebooks/: experiments.ipynb
