[tool.poetry]
name = "gold-prediction"
version = "0.1.0"
description = "A serveless solution for gold prediction using hopswork"
authors = ["peniel18 <penieletornam18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
